--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    <h1>Hello!</h1>
+    <h1 class="error"> {{message }} </h1>
 {% endblock %}
 
 {% block body %}
-    Hello {{ name }}!
+    <p> {{ info }} </p>
 {% endblock %}
