--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    <h1>About to log out</h1>
+    <h1>Goodbye!</h1>
 {% endblock %}
 
 {% block body %}
