--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,25 +1,193 @@
+* {
+  border: 0px solid;
+  border-radius: 1em;
+}
+
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: blue;
-  background-color: white;
-  max-width: 70em;
+  color: black;
+  background-color: #e2ca76;
+  max-width: 65em;
   margin: 0 auto;
 }
 
-header {
-  width: 100%;
+a {
+  text-decoration: none;
 }
 
-header nav {
-  display: flex;
-  
+.fa-search {
+  -webkit-transform: rotate(0.27turn);
+          transform: rotate(0.27turn);
+  margin-right: 0.1em;
+}
+
+header {
+  margin: 0.5em 0 0 1em;
+  padding: 1.5em;
+  width: 100%;
+  background-color: black;
 }
 
 header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   list-style: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+header nav li {
+  font-size: 1.4em;
+  padding: 0 0.7em;
+}
+
+header nav a {
+  color: #e2ca76;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header nav .label {
+  padding-bottom: 0.2em;
+}
+
+header nav i {
+  padding-right: 0.2em;
 }
 
 main {
-  background-color: greenyellow;
+  padding: 0.7em;
+  width: 100%;
+  margin-top: -1em;
+  background-color: white;
+  -webkit-box-flex: grow;
+      -ms-flex-positive: grow;
+          flex-grow: grow;
+}
+
+.title {
+  background-color: #bd8b4a;
+  margin-top: -2.5em;
+  margin-left: -0.3em;
+  max-width: 30%;
+  text-align: center;
+}
+
+.title h1 {
+  color: white;
+  font-size: 2.5em;
+  padding: 0.1em 0;
+}
+
+.inbook form {
+  position: relative;
+  min-height: 1.4em;
+}
+
+.inbook form * {
+  color: white;
+  background-color: #bd8b4a;
+}
+
+.inbook input {
+  border: 0px solid;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  font-size: 0.5em;
+  width: 90%;
+  margin-left: 0.3em;
+}
+
+.inbook button {
+  position: absolute;
+  right: 0.15em;
+  bottom: 0.05em;
+  font-size: 1em;
+}
+
+.inbook ::-webkit-input-placeholder {
+  color: white;
+}
+
+.inbook :-ms-input-placeholder {
+  color: white;
+}
+
+.inbook ::-ms-input-placeholder {
+  color: white;
+}
+
+.inbook ::placeholder {
+  color: white;
+}
+
+.inbook textarea:focus, .inbook input:focus {
+  outline: none;
+}
+
+.content {
+  padding-top: 0.5em;
+}
+
+.books {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0.9em;
+}
+
+.books h2 {
+  padding-bottom: 0.5em;
+}
+
+.books > * {
+  padding: 0.5em;
+}
+
+.books .last {
+  background-color: yellow;
+  margin-bottom: 2em;
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+}
+
+.books .last article {
+  max-width: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.books .most {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  background-color: yellowgreen;
+  margin-top: 2em;
+  margin-left: -20%;
+}
+
+.books .horizontal {
+  padding: 0.5em;
+  margin: 0 0.1em;
+}
+
+.books .author, .books h4 {
+  text-align: right;
+}
+
+footer {
+  text-align: right;
 }
 /*# sourceMappingURL=style.css.map */
