--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    <h1>Register your username</h1>
+    <h1>Registration</h1>
 {% endblock %}
 
 {% block body %}
