--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 * {
   border: 0px solid;
   border-radius: 1em;
+  outline: none;
 }
 
 body {
@@ -13,6 +14,15 @@ body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+}
+
+textarea:focus, input:focus {
+  outline: none;
 }
 
 .fa-search {
@@ -85,6 +95,63 @@ main {
   padding: 0.1em 0;
 }
 
+.search form {
+  margin-bottom: 1em;
+}
+
+.search input {
+  background-color: #e2ca76;
+  font-size: 1em;
+  border: 1.5px solid black;
+  width: 15em;
+  padding: 0.2em 0.5em;
+}
+
+.search button {
+  font-size: 1em;
+  border: 1.5px solid black;
+  padding: 0.25em;
+}
+
+.search button:hover {
+  background-color: #bd8b4a;
+}
+
+.search p {
+  padding: 1em 0;
+}
+
+.results table {
+  margin-top: 0.5em;
+  border-collapse: collapse;
+}
+
+.results table * {
+  border-radius: 0;
+  padding: 0.2em 0.5em;
+}
+
+.results table a {
+  color: brown;
+}
+
+.results table .row:nth-child(even) {
+  background-color: #e2ca76;
+}
+
+.results table .row:hover {
+  background-color: #bd8b4a;
+}
+
+.results table .index {
+  text-align: center;
+}
+
+.results table .link {
+  font-size: 1.3em;
+  padding: 0;
+}
+
 .inbook form {
   position: relative;
   min-height: 1.4em;
@@ -111,6 +178,10 @@ main {
   font-size: 1em;
 }
 
+.inbook i:hover {
+  color: brown;
+}
+
 .inbook ::-webkit-input-placeholder {
   color: white;
 }
@@ -127,8 +198,60 @@ main {
   color: white;
 }
 
-.inbook textarea:focus, .inbook input:focus {
-  outline: none;
+.score {
+  margin-top: 1em;
+  width: 22em;
+}
+
+.score form {
+  padding-top: 0.5em;
+}
+
+.score form p {
+  margin-bottom: 0.5em;
+}
+
+.score form textarea {
+  font-size: 1.3em;
+  padding: 0.5em;
+  max-width: 90%;
+  min-width: 90%;
+  min-height: 6em;
+  border: 1px solid #bd8b4a;
+}
+
+.score form button {
+  width: 90%;
+  background-color: #bd8b4a;
+  color: white;
+  font-size: 1em;
+}
+
+.score form input[type=radio] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.score form label {
+  cursor: pointer;
+  display: inline-block;
+  background-color: #e9daba;
+  padding: 0.1em 0.4em;
+  border: 2px solid #444;
+  border-radius: 1em;
+}
+
+.score form label:hover {
+  background-color: #e2ca76;
+}
+
+.score form input[type=radio]:checked + label {
+  background-color: #bd8b4a;
+}
+
+.score form input[type=radio]:focus + label {
+  background-color: #bd8b4a;
 }
 
 .content {
