--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -18,6 +18,12 @@ body {
   
 }
 
+.body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 a {
     text-decoration: none;
     cursor: pointer;
@@ -25,6 +31,19 @@ a {
 
 button {
     cursor: pointer;
+}
+
+form {
+    button {
+        font-size: 1em;
+        border: 1.5px solid black;
+        padding: 0.25em;
+        margin: 0.5em 0;
+    }
+
+    button:hover {
+        background-color: $titlecolor;
+    }
 }
 
 textarea:focus, input:focus{
@@ -77,7 +96,8 @@ main {
     width: 100%;
     margin-top: -1em;
     background-color: $maincolor;
-    flex-grow: grow;
+    flex-basis: 85vh;
+    flex-grow: 9;
 }
 
 .title {
@@ -96,7 +116,7 @@ main {
 
 .search {
     form {
-        margin-bottom: 1em;
+        margin: 1em 0;
     }
 
     input {
@@ -105,26 +125,7 @@ main {
         border: 1.5px solid black;
         width: 15em;
         padding: 0.2em 0.5em;
-    }
-
-    button {
-        font-size: 1em;
-        border: 1.5px solid black;
-        padding: 0.25em;
-        
-        
-
-    }
-
-    button:hover {
-        
-        background-color: $titlecolor;
-       
-    }
-
-    p {
-        padding: 1em 0;
-    }
+    }    
 }
 
 .results {
@@ -161,9 +162,6 @@ main {
                     
         }
     }
-  
-    
-
 }
 
 .inbook {
@@ -184,16 +182,17 @@ main {
         border-radius: 0;
         font-size: 0.5em;
         width: 90%;
-        margin-left: 0.3em;
-        
-        
+        margin-left: 0.3em;   
     }
 
-    button {
+    #magnifier {
+        border: 0px solid black;
+        padding: 0;
+        margin: 0;
         position: absolute;
-        right: 0.15em;
-        bottom: 0.05em;
-        font-size: 1em;
+        right: 0.1em;
+        top: 0;
+        font-size: 1.3em;
     }
 
     i:hover {
@@ -209,32 +208,30 @@ main {
 .score {
     margin-top: 1em;
     width: 22em;
-
-
+    
     form {
         padding-top: 0.5em;
-
+                
         p {
             margin-bottom: 0.5em;
-            
+
         }
         textarea {
+            margin-bottom: 0.2em;
             font-size: 1.3em;
             padding: 0.5em;
-            
             max-width: 90%;
             min-width: 90%;
-            min-height: 6em;
-            border: 1px solid $titlecolor;
+            border: 2px solid $titlecolor;
             
         }
 
         button {
+            margin-top: 0em;
             width: 90%;
             background-color: $titlecolor;
             color: white;
-            font-size: 1em;
-            
+            font-size: 1.5em;
 
         }
 
@@ -256,7 +253,7 @@ main {
 
         label:hover {
             background-color: $backcolor;
-          }
+        }
 
         input[type=radio]:checked + label {
             background-color:$titlecolor;
@@ -269,10 +266,90 @@ main {
     }
 }
 
-.content {
-    padding-top: 0.5em;
+.info {
+    margin-top: 0.5em;
+    * {
+        margin-top: 0.3em;
+    };
+}
+
+.your {
+    margin-top: 2em;
+    border: 2px solid $titlecolor;
+    padding: 0.5em 1em;
+    
+    .stars {
+        text-align: left;
+    }
+
+    i {
+       font-size: 1.8em;
+       color: $titlecolor;
+       margin: 0.5em 0;
+    }
+}
+
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+ 
+}
+
+.left {
+    flex-basis: 55%;
+}
+
+.right {
+    flex-basis: 40%;
+    // flex-grow: 1;
     
 }
+
+.comment {
+    width: 100%;
+    background-color: $backcolor;
+    margin-top: 0.5em;
+    padding: 1em;
+}
+
+.others {
+    border: 2px solid $titlecolor;
+    padding: 0.5em 1em;
+    margin-top: 0.5em;
+    background-color: $backcolor;
+
+    .comment {
+        background-color: wheat;
+    }
+
+    .flex {
+        justify-content: flex-start;
+        *{
+            margin-right: 1em;
+        }
+    }
+
+    .stars i {
+        color: rgba(97, 75, 34, 0.76);
+    }
+
+    * {
+        margin-bottom: 0.2em;
+    }
+
+
+}
+
+
+.content {
+    max-width: 90%;
+    margin: 0 auto;
+    padding-top: 0.5em;
+    display: block;
+    
+}
+
 
 .books {
     display: flex;
@@ -284,36 +361,70 @@ main {
        padding: 0.5em;
    }
     
-   .last {
-        background-color: yellow;
+   .most {
+        background-color: wheat;
         margin-bottom: 2em;
         flex-basis: 70%;
         flex-grow: 2;
+        
 
         article {
             max-width: 75%;
-            display: flex;         
+            display: flex;  
+                
+            min-height: 80%; 
             
         }
         
     }
 
-    .most {
+    .last {
         flex-basis: 30%;
         flex-grow: 1;
-
-        background-color: yellowgreen;
+        background-color: $titlecolor;
         margin-top: 2em;
         margin-left: -20%;
 
     }
     
-    .horizontal {
+    .card {
+        border: 2px solid black;
         padding: 0.5em;
+        margin: 0.2em 0.1em;
+
+        a {
+            text-decoration: none;
+            color: $titlecolor;
+            
+        }
+
+        background-color: wheat;
+
+        h3, .stars {
+            margin-bottom: 0.5em;
+            padding-bottom: 0.5em;
+            border-bottom: 2px solid $titlecolor;
+            border-radius: 0;
+        }
+    }
+
+    .horizontal {
+        flex-basis: 25%;
+        flex-grow: 1;
+        border: 2px solid $titlecolor;
+        background-color: white;
         margin: 0 0.1em;
+        
+        .stars {
+            margin-top: 0.1em;
+            font-weight: bold;
+            color: orange;
+            
+
+        }
     }
     
-    .author, h4 {
+    .author {
         text-align: right;
     }
 }
@@ -322,4 +433,7 @@ main {
 
 footer {
     text-align: right;
+    flex-grow: 0;
+    // flex-basis: 3em;
+    margin: 0.5em 0;
 }
