--- a/templates/index.html
+++ b/templates/index.html
@@ -6,36 +6,51 @@
 
  {% block body %}
     <div class="books">
+        <div class="most review">
+            <h2>Most Reviewed Books</h2>
+            <article>
+                {% for rev in most_rated %}
+            <div class="card vertical">
+                <a href="book/{{rev.isbn}}"><h3>{{ rev.title }}</h3></a>
+                <h4>by {{ rev.author }}</h4>
+                <h4>Av.Score:</h4>
+                <p>{{ (rev.total / rev.revs)|round(2) }} out of 5.0</p>
+                <p>Total user reviews:{{ rev.revs }}</p>
+            </div>
+            {% endfor %}
+            </article>
+        </div>
         <div class="last review">
             <h2>Last Reviews by users</h2>
             <article>
                 {% for rev in last_revs %}
                     <div class="card horizontal">
-                    <a href="book/{{rev.isbn}}"><h3>{{ rev.title }} by {{ rev.author }}</h3></a>
-                    <h4>{{ rev.score }} out of 5</h4>
+                    <a href="book/{{rev.isbn}}"><h3>{{ rev.title }}</h3></a>
+                    <h4>by {{ rev.author }}</h4>
+                    <!-- <h4>{{ rev.score }} out of 5</h4> -->
+                    <div class="stars">
+                        <p>Rating:
+                        {% for i in range(rev.score) %}
+                            <i class="fas fa-star"></i>
+                        {% endfor %}
+                        {% for n in range(5 - rev.score) %}
+                            <i class="far fa-star"></i>
+                        {% endfor %}
+                        </p>
+                    </div>
                     {% if rev.comment %}
                     <p>{{ rev.comment }}</p>
                     {% endif %}
                     {% if rev.name %}
-                    <p class="author">Author: {{ rev.name }}</p>
+                    <p class="author">by {{ rev.name }}</p>
                     {% else %}
-                    <p class="author">Author: {{ rev.username }}</p>
+                    <p class="author">by {{ rev.username }}</p>
                     {% endif %}
                     </div>
                 {% endfor %}
             </article>
         </div>
-        <div class="most review">
-            <h2>Most Reviewed Books</h2>
-            {% for rev in most_rated %}
-            <div class="card vertical">
-                <a href="book/{{rev.isbn}}"><h3>{{ rev.title }} by {{ rev.author }}</h3></a>
-                <h4>Score: {{ (rev.total / rev.revs)|round(2) }} out of 5.0</h4>
-                <p>from {{ rev.revs }} user reviews</p>
-            </div>
-            <p>----------------</p>
-            {% endfor %}
-        </div>
+        
     </div>
 
 {% endblock %}
